# TractorBeam

./: .clangd  .dockerignore  .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.en.md  README.md  release-please-config.json  roadmap.md
.github/workflows/: check-code.yml  compat.yml  release-please.yml  release.yml
.trellis/spec/backend/: index.md  local-ipc.md  quality-guidelines.md  relay-v2.md
crates/bridge-client/: Cargo.toml
crates/bridge-client/src/: lib.rs
crates/bridge-core/: Cargo.toml
crates/bridge-core/src/: build_info.rs  lib.rs  udp_fec.rs  udp_fec_tests.rs
crates/bridge-core/src/client/: config.rs  config_tests.rs  diagnostics.rs  hook_config.rs  hook_ipc.rs  hook_ipc_test_support.rs  hook_ipc_tests.rs  hook_lifecycle.rs  input_delay.rs  internal_test.rs  internal_test_upload.rs  join_code.rs  join_code_tests.rs  lan.rs  logging.rs  mod.rs  packet_flow.rs  probe.rs  process_lifecycle.rs  relay_transport.rs  room_path_quality.rs  runtime.rs  runtime_tests.rs  session.rs  session_config.rs  session_health.rs  session_health_tests.rs  session_tests.rs  smoothness.rs  state.rs  test_relay.rs
crates/bridge-core/src/client/diagnostics/: package.rs
crates/bridge-core/src/client/fixtures/join-code/: lan-v6.txt  relay-v5.txt
crates/bridge-core/src/client/hook_ipc/: connection.rs
crates/bridge-core/src/client/join_code/: lan.rs  relay.rs
crates/bridge-core/src/client/lan/: adapter.rs  control.rs  control_tests.rs  link.rs  membership.rs  path.rs  path_tests.rs  room_handle.rs
crates/bridge-core/src/client/lan/path/: candidate.rs  data.rs
crates/bridge-core/src/client/probe/: light_ping.rs  readiness.rs
crates/bridge-core/src/client/relay_transport/: bootstrap.rs  pow.rs
crates/bridge-core/src/client/runtime/: maintenance.rs
crates/bridge-core/src/client/session/: data_plane.rs  lan_route.rs  supervisor.rs
crates/bridge-core/src/client/session_health/: stats.rs
crates/bridge-core/src/client/state/: time.rs
crates/bridge-core/src/diagnostics/: mod.rs
crates/bridge-core/src/protocol/: control.rs  envelope.rs  local.rs  mod.rs
crates/bridge-core/src/steam/: account.rs  mod.rs  paths.rs  registry.rs  vdf.rs
crates/bridge-diagnostics/: Cargo.toml
crates/bridge-diagnostics/src/: lib.rs
crates/bridge-gui/: Cargo.toml
crates/bridge-gui/locales/: app.yml
crates/bridge-gui/src/: app.rs  app_tests.rs  application.rs  application_tests.rs  i18n.rs  logging.rs  main.rs
crates/bridge-gui/src/app/: events.rs  fonts.rs  join_code.rs  pages.rs  status.rs  widgets.rs
crates/bridge-gui/src/app/pages/: about.rs  helpers.rs  logs.rs  navigation.rs
crates/bridge-gui/src/application/: commands.rs
crates/bridge-protocol/: Cargo.toml
crates/bridge-protocol/src/: lib.rs
crates/bridge-relay/: Cargo.toml
crates/bridge-relay/src/: build_info.rs  config.rs  config_tests.rs  domain.rs  domain_v2.rs  egress.rs  incident.rs  main.rs  metrics.rs  metrics_v2.rs  peer_registry.rs  protocol.rs  server.rs  server_tests.rs  server_v2.rs  state.rs  state_tests.rs  state_v2.rs  state_v2_tests.rs  telemetry.rs  v1.rs  v2.rs
crates/bridge-relay/src/domain/: session.rs
crates/bridge-relay/src/server/: control.rs  data.rs  establishment.rs  maintenance.rs
crates/bridge-relay/src/server/control/: commands.rs
crates/bridge-relay/src/state/: routing.rs  traffic_budget.rs
crates/direct-protocol/: Cargo.toml
crates/direct-protocol/src/: control.rs  frame.rs  lib.rs  types.rs
crates/direct-protocol/tests/: direct_wire_contract.rs
crates/direct-protocol/tests/fixtures/v1/: check.hex  control-ping.json  data-4.hex  heartbeat.hex
crates/hook-ipc/: Cargo.toml
crates/hook-ipc/src/: codec.rs  lib.rs  sync_io.rs
crates/isaac-injector/: Cargo.toml
crates/isaac-injector/src/: error.rs  lib.rs  main.rs  paths.rs  platform.rs  process.rs
crates/isaac-injector/src/paths/: windows_elevation.rs
crates/native-hook/: Cargo.toml
crates/native-hook/examples/: hook_loader.rs  ipc_test_peer.rs
crates/native-hook/src/: lib.rs
crates/native-hook/src/windows/: bridge.rs  iat.rs  input_delay.rs  ipc_worker.rs  mod.rs  steam.rs
crates/relay-protocol/: Cargo.toml
crates/relay-protocol/src/: bootstrap.rs  control.rs  duplicate.rs  frame.rs  game.rs  golden_tests.rs  lib.rs
crates/relay-protocol/src/fixtures/: challenge.json  envelope-data.hex  error.json  health-ping.json  join.json  ready.json
crates/relay-protocol/src/v2/: bootstrap.rs  control.rs  duplicate.rs  frame.rs  mod.rs
crates/relay-protocol/tests/: v1_wire_contract.rs  v2_wire_contract.rs
crates/relay-protocol/tests/fixtures/v1/: game-16.hex  health-pong.json  join.json  room-update.json
crates/relay-protocol/tests/fixtures/v2/: bootstrap-client-hello.hex  client-join.json  data-16.hex  server-ready.json
crates/steam-detector/: Cargo.toml
crates/steam-detector/src/: lib.rs
deploy/: Dockerfile.relay  client.config.example.toml  client.config.toml  client.release.example.toml  docker-compose.relay.template.yml  docker-compose.relay.yml  relay.example.toml  relay.toml
docs/: architecture.md  closed-test-udp-fec-ab.md  configuration.md  lan.md  relay-observability.md  relay.md  security.md
docs/adr/: 0001-hard-cut-relay-protocol-v2.md
prototype/: README.md
prototype/native-hook/: CMakeLists.txt  CMakePresets.json  README.md
prototype/native-hook/include/eos_probe/: bridge.h  eos_hooks.h  eos_types.h  iat_patch.h  process_inject.h  telemetry.h
prototype/native-hook/src/: bridge.cpp  dll_main.cpp  eos_hooks.cpp  iat_patch.cpp  injector_main.cpp  launcher_main.cpp  process_inject.cpp  telemetry.cpp
prototype/tools/: README.md
prototype/tools/python/: analyze_steam_trace.py  bridge_protocol.py  bridge_relay.py  bridge_sidecar.py  summarize_eos_probe.py
prototype/tools/windows/: find-isaac-process.ps1  reset-probe-log.ps1  start-bridge-sidecar.ps1  start-steam-and-inject.ps1  start-steam-bridge-and-inject.ps1
scripts/: check_no_public_ip_literals.py
scripts/compat/: README.md  check_compat.py  compat_matrix.py  pyproject.toml
