[workspace]
members = [
    "crates/bridge-core",
    "crates/bridge-relay",
    "crates/bridge-gui",
    "crates/isaac-injector",
    "crates/native-hook",
    "crates/hook-ipc",
    "crates/relay-protocol",
    "crates/direct-protocol",
]
resolver = "3"

[workspace.package]
version = "0.3.1" # x-release-please-version
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mcthesw/TractorBeam"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
