[package]
name = "basement-bridge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
internal-test = ["dep:base64", "dep:uuid", "dep:zip"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
basement-isaac-injector = { path = "../isaac-injector" }
bytes = "1.11.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
directories = "6.0.0"
futures-util = { version = "0.3.31", features = ["sink"] }
open = { version = "5.3.5", features = ["shellexecute-on-windows"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
toml = "1.1.2"
tracing = "0.1.44"
uuid = { version = "1.23.3", features = ["v4"], optional = true }
zip = { version = "9.0.0-pre2", default-features = false, optional = true }

[target."cfg(windows)".dependencies]
winreg = "0.56.0"
