[package]
name = "tractor-beam-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
atomic-write-file = "0.3.0"
tractor-beam-hook-ipc = { path = "../hook-ipc" }
tractor-beam-isaac-injector = { path = "../isaac-injector" }
tractor-beam-direct-protocol = { path = "../direct-protocol" }
tractor-beam-relay-protocol = { path = "../relay-protocol" }
bs58 = "0.1"
backon = { version = "1.6.0", default-features = false, features = ["std"] }
bytes = "1.11.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
directories = "6.0.0"
futures-util = { version = "0.3.31", features = ["sink"] }
interprocess = "2.4.2"
network-interface = "2.0.5"
open = { version = "5.3.5", features = ["shellexecute-on-windows"] }
rand = "0.10.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
toml = "1.1.2"
toml_edit = "0.22.24"
tracing = "0.1.44"
zip = { version = "=8.2.0", default-features = false, features = ["deflate"] }

[target."cfg(windows)".dependencies]
winreg = "0.56.0"
