[package]
name = "tractor-beam-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "tractor-beam"
path = "src/main.rs"

[dependencies]
arboard = "3"
tractor-beam-core = { path = "../bridge-core" }
directories = "6.0.0"
eframe = { version = "0.35.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
] }
rust-i18n = "4.1.0"
open = { version = "5.3.5", features = ["shellexecute-on-windows"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
serde_yaml = "0.9.34"

[package.metadata.i18n]
available-locales = ["zh_CN", "en_US"]
default-locale = "zh_CN"
load-path = "locales"
