[package]
name = "tractor-beam-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
tractor-beam-relay-protocol = { path = "../relay-protocol" }
bytes = "1.11.1"
bs58 = "0.1"
argh = "0.1.19"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
ipnet = { version = "2.12.0", features = ["serde"] }
opentelemetry = { version = "0.31.0", default-features = false, features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["metrics", "rt-tokio", "spec_unstable_metrics_views", "trace"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
serde_json = "1.0.150"
