[package]
name = "tractor-beam-native-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "tractor_beam_native_hook"
crate-type = ["cdylib", "rlib"]

[dependencies]
tractor-beam-hook-ipc = { path = "../hook-ipc" }
interprocess = "2.4.2"

[target.'cfg(all(windows, target_arch = "x86"))'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }
